[package]
name = "balls"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 2

[profile.dev]
opt-level = 1

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
dev = [
    "bevy/dynamic_linking",
]

# All of Bevy's default features exept for the audio related ones (bevy_audio, vorbis), since they clash with bevy_kira_audio
#   and android_shared_stdcxx, since that is covered in `mobile`
[dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",
    "bevy_debug_stepping",
] }
bevy_kira_audio = { version = "0.19" }
rand = { version = "0.8.3" }
webbrowser = { version = "0.8", features = ["hardened"] }
winit = { version = "0.29", default-features = false }
image = { version = "0.24", default-features = false }
bevy_rapier3d = "0.25.0"
matchbox_socket = "0.9.0"
bevy_matchbox = { version = "0.9", features = ["ggrs"] }
bevy_ggrs = { version = "0.15", features = ["wasm-bindgen"] }
bytemuck = "1.15.0"

[build-dependencies]
embed-resource = "1"
